src/snapshots/ruff__linter__tests__C415_C415.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  lst = [2, 1, 3]
| a = set(lst[::-1])
|> Unnecessary subscript reversal of iterable within `set()`
| b = reversed(lst[::-1])
|> Unnecessary subscript reversal of iterable within `reversed()`
| c = sorted(lst[::-1])
|> Unnecessary subscript reversal of iterable within `sorted()`
| d = sorted(lst[::-1], reverse=True)
|> Unnecessary subscript reversal of iterable within `sorted()`
  e = set(lst[2:-1])
  f = set(lst[:1:-1])
  g = set(lst[::1])
  h = set(lst[::-2])

