src/snapshots/ruff__linter__tests__C416_C416.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnnecessaryComprehension: list
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 15
  fix: ~
- kind:
    UnnecessaryComprehension: set
  location:
    row: 3
    column: 1
  end_location:
    row: 3
    column: 15
  fix: ~

