src/snapshots/ruff__linter__tests__C417_C417.py.snap
---
source: src/linter.rs
assertion_line: 364
expression: checks
---
- kind:
    UnnecessaryMap: generator
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 27
  fix: ~
- kind:
    UnnecessaryMap: generator
  location:
    row: 3
    column: 1
  end_location:
    row: 3
    column: 28
  fix: ~
- kind:
    UnnecessaryMap: list
  location:
    row: 4
    column: 1
  end_location:
    row: 4
    column: 33
  fix: ~
- kind:
    UnnecessaryMap: generator
  location:
    row: 4
    column: 6
  end_location:
    row: 4
    column: 32
  fix: ~
- kind:
    UnnecessaryMap: set
  location:
    row: 5
    column: 1
  end_location:
    row: 5
    column: 37
  fix: ~
- kind:
    UnnecessaryMap: generator
  location:
    row: 5
    column: 5
  end_location:
    row: 5
    column: 36
  fix: ~
- kind:
    UnnecessaryMap: dict
  location:
    row: 6
    column: 1
  end_location:
    row: 6
    column: 37
  fix: ~
- kind:
    UnnecessaryMap: generator
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 36
  fix: ~

