src/snapshots/ruff__linter__tests__C901_C901.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    FunctionIsTooComplex:
      - trivial
      - 1
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - expr_as_statement
      - 1
  location:
    row: 5
    column: 0
  end_location:
    row: 9
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - sequential
      - 1
  location:
    row: 9
    column: 0
  end_location:
    row: 15
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - if_elif_else_dead_path
      - 3
  location:
    row: 15
    column: 0
  end_location:
    row: 24
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - nested_ifs
      - 3
  location:
    row: 24
    column: 0
  end_location:
    row: 34
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - for_loop
      - 2
  location:
    row: 34
    column: 0
  end_location:
    row: 39
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - for_else
      - 2
  location:
    row: 39
    column: 0
  end_location:
    row: 46
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - recursive
      - 2
  location:
    row: 46
    column: 0
  end_location:
    row: 53
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - nested_functions
      - 3
  location:
    row: 53
    column: 0
  end_location:
    row: 61
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - a
      - 2
  location:
    row: 54
    column: 4
  end_location:
    row: 58
    column: 4
  fix: ~
- kind:
    FunctionIsTooComplex:
      - b
      - 1
  location:
    row: 55
    column: 8
  end_location:
    row: 57
    column: 8
  fix: ~
- kind:
    FunctionIsTooComplex:
      - try_else
      - 4
  location:
    row: 61
    column: 0
  end_location:
    row: 72
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - nested_try_finally
      - 3
  location:
    row: 72
    column: 0
  end_location:
    row: 82
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - foobar
      - 3
  location:
    row: 82
    column: 0
  end_location:
    row: 92
    column: 0
  fix: ~
- kind:
    FunctionIsTooComplex:
      - annotated_assign
      - 1
  location:
    row: 92
    column: 0
  end_location:
    row: 94
    column: 0
  fix: ~

