src/snapshots/ruff__linter__tests__D100_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PublicModule
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 1
  fix: ~

