src/snapshots/ruff__linter__tests__D101_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PublicClass
  location:
    row: 15
    column: 0
  end_location:
    row: 72
    column: 0
  fix: ~

