src/snapshots/ruff__linter__tests__D102_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PublicMethod
  location:
    row: 22
    column: 4
  end_location:
    row: 25
    column: 4
  fix: ~
- kind: PublicMethod
  location:
    row: 51
    column: 4
  end_location:
    row: 54
    column: 4
  fix: ~
- kind: PublicMethod
  location:
    row: 63
    column: 4
  end_location:
    row: 64
    column: 4
  fix: ~

